# nirion

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml  tarpaulin.toml  todo.md
.github/workflows/: check.yml  coverage.yml  tag-and-release.yml
nirion-bin/: Cargo.toml
nirion-bin/src/: commands.rs  docker.rs  health_render.rs  lifecycle.rs  lock.rs  log_render.rs  main.rs  monitor.rs  progress.rs  progress_render.rs  projects.rs  spinner.rs  status.rs  status_display.rs  util.rs
nirion-bin/src/commands/: cat.rs  compose_exec.rs  down.rs  exec.rs  health.rs  inspect.rs  list.rs  lock.rs  logs.rs  mod.rs  monitor.rs  patch.rs  ps.rs  pull.rs  reload.rs  restart.rs  start.rs  stop.rs  top.rs  up.rs  update.rs  volumes.rs
nirion-bin/src/docker/: compose.rs  monitor.rs  status.rs
nirion-bin/src/lifecycle/: render.rs
nirion-bin/tests/: cli.rs
nirion-lib/: Cargo.toml
nirion-lib/src/: auth.rs  compose.rs  compose_file.rs  config.rs  context.rs  docker.rs  events.rs  exec.rs  health.rs  inspect.rs  lib.rs  lock.rs  lock_update.rs  logs.rs  patch.rs  projects.rs  wait.rs
nirion-oci-lib/: .gitignore  Cargo.toml
nirion-oci-lib/src/: auth.rs  client.rs  docker_hub.rs  lib.rs  main.rs  oci.rs  test_registry.rs  unified.rs  version.rs
nirion-oci-lib/tests/: client_integration.rs
nirion-tui-lib/: Cargo.toml
nirion-tui-lib/src/: ansi.rs  color.rs  lib.rs  line_renderer.rs  spinner.rs  status.rs  table.rs  terminal.rs
nix/: check-commit-messages.nix  check-message.nix  commit-message.nix  coverage.nix  dev-shell.nix  module.nix  package.nix  pre-commit.nix
nix/coverage/: full.nix  merge.nix  nix.nix  nixcov.nix  normalize.nix  rust.nix  tarpaulin.nix
nix/module/: arion.nix  config.nix  lib.nix  options.nix  systemd.nix  wrapper.nix
nix/module/compose/: network.nix  project.nix  render.nix  service.nix  types.nix
nix/module/lib/: default.nix  healthchecks.nix  json-healthcheck.pl  micro-json.pl
nix/module/lib/healthchecks/: default.nix  perl.nix  shell.nix
src/: docker.rs  exec.rs  lock.rs  main.rs  monitor.rs  progress.rs  projects.rs  up.rs  update.rs
src/commands/: cat.rs  compose_exec.rs  down.rs  exec.rs  inspect.rs  list.rs  lock.rs  logs.rs  mod.rs  monitor.rs  patch.rs  ps.rs  restart.rs  stop.rs  top.rs  up.rs  update.rs  volumes.rs
src/docker/: compose.rs  monitor.rs  skopeo.rs  status.rs
tests/contract/: default.nix  lock-file.nix  projects-file.nix
tests/module/: basic-systemd.nix  compose-options.nix  default.nix  healthchecks.nix  lock-images.nix  nix-eval.nix  service-shapes.nix  sops.nix
tests/runtime/: default.nix  healthchecks-server.pl  healthchecks.nix  lock-file.nix  micro-json.nix  micro-json.pl  projects-file.nix
tests/vm/: basic.nix  cli-lifecycle.nix  default.nix  multi-project.nix  sops-compose-template.nix  sops.nix
