[package]
name = "nirion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
oci-registry-client = "0.2.2"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
tokio = { version = "1.48.0", features = ["full"] }
