[package]
name = "nirion-bin"
version = "0.3.2"
edition = "2024"

[[bin]]
name = "nirion"
path = "src/main.rs"

[dependencies]
nirion-lib = { path = "../nirion-lib" }
nirion-oci-lib = { path = "../nirion-oci-lib" }
nirion-tui-lib = { path = "../nirion-tui-lib" }
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
clap_complete = { version = "4.5.62", features = ["unstable-dynamic"] }
console = "0.16.1"
crossterm = "0.29.0"
humantime = "2.3.0"
indicatif = "0.18.3"
once_cell = "1.21.3"
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.32"
serde_yaml_ng = "0.10.0"
