[package]
name = "nirion-bin"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "nirion"
path = "src/main.rs"

[dependencies]
nirion-lib = { path = "../nirion-lib" }
nirion-oci-lib = { path = "../nirion-oci-lib" }
nirion-tui-lib = { path = "../nirion-tui-lib" }
anyhow = { version = "1.0.104", features = ["backtrace"] }
clap = { version = "4.6.2", features = ["derive", "env"] }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
humantime = "2.4.0"
indicatif = "0.18.6"
once_cell = "1.21.4"
paste = "1.0.15"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
futures = "0.3.33"
serde_yaml_ng = "0.10.0"

[dev-dependencies]
tempfile = "3.27.0"
