[package]
name = "nirion-lib"
version = "0.3.1"
edition = "2024"

[dependencies]
nirion-oci-lib = { path = "../nirion-oci-lib" }
anyhow = "1.0.101"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
