[package]
name = "nirion-oci-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
derive_more = { version = "2.1.1", features = ["display", "into"] }
oci-client = "0.16.0"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
