[package]
name = "nirion-oci-lib"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.104", features = ["backtrace"] }
derive_more = { version = "2.1.1", features = ["display", "into"] }
oci-client = "0.17.0"
reqwest = { version = "0.13.4", features = ["json"] }
semver = "1.0.28"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tempfile = { version = "3.27.0", optional = true }
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["full"] }

[features]
test-registry = ["dep:tempfile"]

[dev-dependencies]
nirion-oci-lib = { path = ".", features = ["test-registry"] }
